U4-5793 prevent drag element off screen vertically

--- a/src/Umbraco.Web.UI.Client/src/less/gridview.less
+++ b/src/Umbraco.Web.UI.Client/src/less/gridview.less
@@ -10,8 +10,9 @@
 
  // Sortabel
  // -------------------------
+
  .usky-grid .ui-sortable-helper  {
-     position:absolute;
+     position:absolute !important;
      border: dashed 1px #000 !important;
      background: #ccc;
      opacity: 0.4;
@@ -44,8 +45,9 @@
      text-align: center;
      font-size: 85px;
      line-height: 65px;
-     color: @grayLighter;
+     color: @gray;
      vertical-align: middle;
+     background-color:@grayLighter;
  }
 
  .usky-grid .ui-sortable-placeholder:hover{
@@ -138,6 +140,7 @@
 .usky-grid .usky-cell{
      position: relative;
      border: 1px dashed rgba(0,0,0,0);
+     min-height:127px;
 }
 
 .usky-grid  .cell-tools {
